fixed InfoCard UI bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -305,8 +305,9 @@ li {
     color: #FFFFFF;
     text-align: center;
     border-radius: 20px 0 0 0;
-    padding-top: 15%;
     cursor: pointer;
+    display: grid;
+    place-items: center;
 }
 
 .players-option img{
@@ -315,7 +316,8 @@ li {
 
 .players-option h4{
     padding-top: 2%;
-    margin-top: 0;
+    margin: 0;
+    padding-bottom: 0;
 }
 
 
@@ -324,8 +326,9 @@ li {
     color: #FFFFFF;
     border-radius: 0 20px 0 0;
     text-align: center;
-    padding-top: 15%;
     cursor: pointer;
+    display: grid;
+    place-items: center;
 }
 
 .invite-option img{
@@ -334,7 +337,8 @@ li {
 
 .invite-option h4{
     padding-top: 2%;
-    margin-top: 0;
+    margin: 0;
+    padding-bottom: 0;
 }
 
 .search-bar{
@@ -665,6 +669,10 @@ li {
         
     }
 
+    .dashboard{
+        height: auto;
+    }
+
     .dashboard-content{
         
         margin-top: 20%;
@@ -678,6 +686,14 @@ li {
         margin-left: 10%;
         height: 60vh;
         margin-bottom: 20%;
+    }
+
+    .players-option img{
+        height: 30px;
+    }
+
+    .invite-option img{
+        height: 30px;
     }
 
     .search-img{
